--- a/vs2015/gm-apclientpp.vcxproj
+++ b/vs2015/gm-apclientpp.vcxproj
@@ -67,7 +67,7 @@
       <SDLCheck>true</SDLCheck>
       <PrecompiledHeader />
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
-      <AdditionalOptions>/Zc:__cplusplus %(AdditionalOptions) /std:c++14 /wd4996 /Gd</AdditionalOptions>
+      <AdditionalOptions>/Zc:__cplusplus %(AdditionalOptions) /std:c++14 /wd4996 /Gd /DASIO_STANDALONE</AdditionalOptions>
     </ClCompile>
     <Link>
       <TargetMachine>MachineX86</TargetMachine>
@@ -88,7 +88,7 @@
       <SDLCheck>true</SDLCheck>
       <PrecompiledHeader />
       <BasicRuntimeChecks>Default</BasicRuntimeChecks>
-      <AdditionalOptions>/Zc:__cplusplus %(AdditionalOptions) /std:c++14 /wd4996 /Gd</AdditionalOptions>
+      <AdditionalOptions>/Zc:__cplusplus %(AdditionalOptions) /std:c++14 /wd4996 /Gd /DASIO_STANDALONE</AdditionalOptions>
     </ClCompile>
     <Link>
       <TargetMachine>MachineX86</TargetMachine>
