--- a/.github/workflows/build-msbuild.yaml
+++ b/.github/workflows/build-msbuild.yaml
@@ -58,6 +58,7 @@ jobs:
       - name: Build Project
         run: |
           msbuild /m /p:Configuration=${{env.BUILD_CONFIGURATION}} ${{matrix.sln}} /p:Platform=${{env.BUILD_PLATFORM}}
+          dir ${{matrix.sln}}\${{env.BUILD_CONFIGURATION}}
 
       - name: Store
         uses: actions/upload-artifact@v4
@@ -75,6 +76,7 @@ jobs:
         with:
           draft: true
           name: gm-apclientpp ${{ env.RELEASE_TAG }}
-          files: ${{matrix.sln}}\${{env.BUILD_CONFIGURATION}}\gm-apclientpp.dll
+          files: ${{matrix.sln}}/${{env.BUILD_CONFIGURATION}}/gm-apclientpp.dll
+          fail_on_unmatched_files: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
