--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -27,6 +27,13 @@ jobs:
 
   build-vs2022:
     runs-on: windows-latest
+    strategy:
+      matrix:
+        sln:
+          - vs2015
+        platform:
+          - x86
+          - x64
 
     steps:
       - name: Checkout code
@@ -36,11 +43,11 @@ jobs:
       - name: Patch project
         shell: bash
         run: |
-          sed -i 's/<\/AdditionalOptions>/ \/DWSWRAP_NO_SSL<\/AdditionalOptions>/g' vs2015/gm-apclientpp.vcxproj
-          sed -i 's/<PlatformToolset>v140<\/PlatformToolset>/<PlatformToolset>v143<\/PlatformToolset>/' vs2015/gm-apclientpp.vcxproj
-          sed -i 's/libssl.lib;libcrypto.lib;//g' vs2015/gm-apclientpp.vcxproj
+          sed -i 's/<\/AdditionalOptions>/ \/DWSWRAP_NO_SSL<\/AdditionalOptions>/g' ${{matrix.sln}}/gm-apclientpp.vcxproj
+          sed -i 's/<PlatformToolset>v140<\/PlatformToolset>/<PlatformToolset>v143<\/PlatformToolset>/' ${{matrix.sln}}/gm-apclientpp.vcxproj
+          sed -i 's/libssl.lib;libcrypto.lib;//g' ${{matrix.sln}}/gm-apclientpp.vcxproj
       - name: Add MSBuild to PATH
         uses: ilammy/msvc-dev-cmd@v1
       - name: Build
         run: |
-          msbuild /m /p:Configuration=Release vs2015 /p:Platform=x86
+          msbuild /m /p:Configuration=Release ${{matrix.sln}} /p:Platform=${{matrix.platform}}
