--- a/.github/workflows/build-msbuild.yaml
+++ b/.github/workflows/build-msbuild.yaml
@@ -68,7 +68,7 @@ jobs:
         run: |
           md dep
           cd dep
-          git clone -b OpenSSL_1_1_1-stable --depth 1 https://github.com/openssl/openssl.git
+          git clone -b openssl-3.4.0 --depth 1 https://github.com/openssl/openssl.git
           cd openssl
           md ${{env.BUILD_PLATFORM}}
           cd ${{env.BUILD_PLATFORM}}
