Add support for compression

--- a/.github/workflows/build-msbuild.yaml
+++ b/.github/workflows/build-msbuild.yaml
@@ -75,6 +75,16 @@ jobs:
           perl ..\Configure ${{env.OPENSSL_BUILD_PLATFORM}} no-shared
           nmake /S
 
+      - name: Build zlib
+        run: |
+          cd dep
+          git clone -b v1.3.1 --depth 1 https://github.com/madler/zlib.git
+          cd zlib
+          nmake -f win32/Makefile.msc
+          md ${{env.BUILD_PLATFORM}}
+          move *.dll ${{env.BUILD_PLATFORM}}
+          move *.lib ${{env.BUILD_PLATFORM}}
+
       - name: Build Project
         run: |
           msbuild /m /p:Configuration=${{env.BUILD_CONFIGURATION}} ${{matrix.sln}} /p:Platform=${{env.BUILD_PLATFORM}}
